🔼ページ遷移時にフェード付与 #11

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -18,3 +18,12 @@ $colors: (
 html {
     overflow-y: hidden;
 }
+
+.page {
+    &-enter-active, &-leave-active {
+        transition: .5s;
+    }
+    &-enter, &-leave-to {
+        opacity: 0;
+    }
+}
