🔄配色を調整 #28

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,6 @@
 @import '~bulma/sass/utilities/_all';
 $primary: #1AAAD4;
-$info: #3B63AF;
+$info: #4778d3;
 $warning: #F9D76F;
 $danger: #F15E60;
 $success: #2EA58D;
