🔼ロード画面デザイン #8

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,9 +1,10 @@
 @import '~bulma/sass/utilities/_all';
 $primary: #1AAAD4;
-$info: #4778d3;
+$info: #366BCE;
 $warning: #F9D76F;
 $danger: #F15E60;
 $success: #2EA58D;
+$loading-background: #005885;
 
 $colors: (
     "primary": ($primary, $primary-invert),
