🔼タスク作成時に通知タイミングを選択できるように変更 #3

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,7 +1,7 @@
 @import '~bulma/sass/utilities/_all';
 $primary: #1AAAD4;
 $info: #366BCE;
-$warning: #F9D76F;
+$warning: #f37024;
 $danger: #F15E60;
 $success: #2EA58D;
 $loading-background: #005885;
