🔄通知タイミングを表示するように修正 #5

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -61,3 +61,11 @@ html {
         border-bottom-color: #1f7261 !important;
     }
 }
+
+.disabled-line {
+    text-decoration: line-through;
+}
+
+.embedded-image {
+    height: 1.2rem;
+}
