--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,6 +34,12 @@ html {
     }
 }
 
+.trans-background {
+    .loading-background {
+        background: rgba(0, 88, 133, 0.5) !important;
+    }
+}
+
 .title-text {
     font-family: 'LightNovel';
 }
@@ -68,4 +74,8 @@ html {
 
 .embedded-image {
     height: 1.2rem;
+}
+
+.symbol-image {
+    height: 2rem;
 }
